@@ -4,6 +4,9 @@
           (Ticket #5).
         * Unset the variable specified with -e before calling subprogram
           (Ticket #25).
+        * Change the logic for setting a controlling TTY. Fixes compatibility
+          issues with OpenSolaris and MSYS/Cygwin. Thanks Marcin Olszewski for
+          the fix.
 
 Version 1.09
 	* Explicitly set the controlling TTY (SF patch #7)
